# Build rules for AlkyBundle.

# Copyright (C) 2009  James Fargher

# Distributed under the GNU General Public License, Version 3.
# See accompanying file gpl-3.0.txt or copy at
#   <http://www.gnu.org/licenses/>

include_directories(.)
add_subdirectory(bundle)
add_subdirectory(cocktail)
add_subdirectory(ui)
